--- a/package.json
+++ b/package.json
@@ -3,12 +3,39 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "@emotion/react": "^11.9.3",
+    "@emotion/server": "^11.4.0",
+    "@emotion/styled": "^11.11.0",
+    "@mantine/carousel": "5.10.5",
+    "@mantine/core": "^5.10.5",
+    "@mantine/dates": "5.10.5",
+    "@mantine/form": "^5.4.0",
+    "@mantine/hooks": "^5.10.5",
+    "@mantine/next": "5.2.7",
+    "@mantine/notifications": "5.10.5",
+    "@mantine/nprogress": "^5.6.2",
+    "@mantine/prism": "^5.7.1",
+    "@mui/material": "^5.15.2",
+    "@next/bundle-analyzer": "^12.3.1",
+    "@next/font": "^13.0.2",
+    "@tabler/icons": "^1.78.1",
+    "chokidar": "^3.0.0",
+    "cookies-next": "^2.1.1",
+    "core-js": "^3.23.3",
+    "dayjs": "^1.11.0",
+    "embla-carousel-react": "^7.0.0",
+    "gray-matter": "^4.0.3",
+    "left-pad": "1.3.0",
+    "next": "12.2.5",
+    "next-mdx-remote": "^4.1.0",
+    "next-seo": "^5.13.0",
+    "next-sitemap": "^3.1.30",
+    "path": "^0.12.7",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-scripts": "^5.0.1",
+    "reading-time": "^1.5.0",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
