--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@next/bundle-analyzer": "^12.3.1",
     "@next/font": "^13.0.2",
     "@tabler/icons": "^1.78.1",
+    "axios": "^1.6.5",
     "chokidar": "^3.0.0",
     "cookies-next": "^2.1.1",
     "core-js": "^3.23.3",
